Name what the test sources emit and what the excuses cover, so the map stops answering "nothing sees this" for the files that write every hashed byte
R10 triggered on src/test/java/** and src/test/resources/** with an empty sees,
on the claim that the test suite asserts rather than emits. PipelineParityDump and
SelfCapture sit under that glob and are the sole writers of the twenty-eight dump
section files, both digests and all seven pins. Editing the code that produces the
hashed bytes resolved to "no artifact can see this".

R14 takes that package and names what it writes. R16 demotes the eleven for the
four suites that only read the store to assert against it, and for the two markdown
renderers behind them. A demotion answers for the paths that fired it and for no
others, so a reader committed beside a real writer still plans the writer's bundle -
which is the ordinary shape of work in that package, not an edge case.

Reach is now resolved per changed path and then unioned. Resolving the whole set at
once let a reader's demotion subtract a writer's answer, and the plan came back
empty exactly where it was needed.

manifest.visual and sweep.glint were named by no rule governing render code and are
now in the rules that cover the engine. Five artifacts no rule's sees could select
are reachable. Every store-homed registration must now appear in some rule's sees or
be declared blind with a reason naming its real gate, asserted rather than assumed,
because a rule edit without that assertion is a fix that rots.

R18 is a correction rather than an addition: build.gradle.kts and manifest.py hold
the member list the two cache/visual manifests are defined over, and the build file
also holds six of the eight members' render defaults, so an edit to either can
redefine an artifact or move its rows. The earlier claim that a build-script change
reaches nothing was false. It costs every build-script commit two planned artifacts,
which is the price of the statement being true.

Th